<resources>
    <!-- Générique -->
    <string name="app_name">projetRandrianalisoa</string>
    <string name="qcm_app">QCM APP</string>
    <string name="back">Retour</string>
    <string name="category">Catégorie</string>
    <string name="btnValidate">Valider</string>

    <!-- MainActivity -->
    <string name="exit_app">Quitter l\'application</string>
    <string name="answer_survey">Répondre à un questionnaire</string>
    <string name="test_your_knowledge">Testez vos connaissances</string>
    <string name="btnViewScore">Voir les scores</string>
    <string name="btnResetScore">Réinitialiser les scores</string>

    <!-- SurveyActivity -->
    <string name="select_survey">Sélectionner un questionnaire</string>

    <!-- QuizActivity -->
    <string name="question_label">Libellé de la question</string>
    <string name="choice_1">Choix 1</string>
    <string name="choice_2">Choix 2</string>
    <string name="choice_3">Choix 3</string>
    <string name="btnStop">Stopper</string>
    <string name="question_1_5">Question 1/5</string>

    <!-- ViewScoreActivity -->
    <string name="score_s">Score(s)</string>

    <!-- AddSurveyActivity -->
    <string name="btnAddSurvey">Ajouter un questionnaire</string>
    <string name="new_survey">Nouveau questionnaire</string>

    <!-- AddQuestionActivity -->
    <string name="questionToAsk">Question à poser</string>
    <string name="correctAnswerIndex">Indice du réponse (1 pour le choix 1, …)</string>
    <string name="btnAddQuestion">Ajouter une question</string>

    <!-- AdminActivity -->
    <string name="enter_password">Saisissez le mot de passe</string>
</resources>
